Replaces Runtime.exec invocation with ProcessBuilder.